[package]
name = "trie_hard_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
trie-hard = "0.1.0"

[lib]
name = "trie_hard_py"
crate-type = ["cdylib"]