[package]
name = "trie_hard_py"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast mutable UTF-8 trie exposed as a Python extension module"
repository = "https://github.com/imvladikon/trie_hard_py"

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }

[lib]
name = "_native"
crate-type = ["cdylib"]
